ES6: Allow destructuring in for-in loops
Previously, Rhino had a restriction that for-in loops with
destructuring required an array of length 2 to hold key-value pairs.
This was for the Rhino-specific "for each" extension.

In ES6, for-in iterates over keys (strings), and destructuring the
key string is valid. For example:

  for (let [x] in obj) { ... }

This destructures each key string, with x getting the first character.

The fix removes the artificial length requirement and uses
ENUM_INIT_KEYS for for-in (regardless of destructuring), which
correctly provides string keys to be destructured.

Note: This change exposes a pre-existing issue where Rhino doesn't
detect invalid strict-mode assignment targets (like `arguments`) at
parse time. The test array-elem-target-simple-strict.js was
previously "passing" by throwing the wrong error.

Fixes tests:
- language/statements/for-in/head-let-destructuring.js
- language/statements/for-in/head-var-bound-names-dup.js
- language/statements/for-in/scope-body-lex-close.js
- language/statements/for-in/scope-body-var-none.js
- language/statements/for-in/scope-head-var-none.js

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -7928,23 +7928,19 @@ language/statements/for 101/385 (26.23%)
 
 ~language/statements/for-await-of 1234/1234 (100.0%)
 
-language/statements/for-in 16/115 (13.91%)
+language/statements/for-in 12/115 (10.43%)
+    dstr/array-elem-target-simple-strict.js strict
     dstr/obj-rest-not-last-element-invalid.js {unsupported: [object-rest]}
     12.6.4-2.js
     decl-async-fun.js {unsupported: [async-functions]}
     decl-async-gen.js {unsupported: [async-iteration]}
-    head-let-destructuring.js
     head-lhs-let.js non-strict
-    head-var-bound-names-dup.js
     head-var-bound-names-let.js non-strict
     identifier-let-allowed-as-lefthandside-expression-not-strict.js non-strict
     order-enumerable-shadowed.js
     resizable-buffer.js {unsupported: [resizable-arraybuffer]}
-    scope-body-lex-close.js
     scope-body-lex-open.js
-    scope-body-var-none.js
     scope-head-lex-close.js
-    scope-head-var-none.js non-strict
 
 language/statements/for-of 205/751 (27.3%)
     dstr/array-elem-init-evaluation.js
