ES6: Implement iterator closing for for-of loops
Implements ES6 IteratorClose semantics for for-of loops. When a for-of
loop exits via break, return, or throw, the iterator's return() method
is now called to properly close the iterator.

Changes:
- Add ENUM_CLOSE opcode to close ES6 iterators
- Add enumClose() runtime method in ScriptRuntime
- Wrap for-of loops in try-finally to ensure iterator closing
- Track 'done' flag in IdEnumeration to avoid closing exhausted iterators
- Initialize LOCAL_BLOCK locals to null for bytecode verification
- Handle null IdEnumeration when exception occurs before iterator created

This fixes 13 test262 tests including iterator-close-via-break/continue/
return/throw and generator-close-via-* tests. Net improvement of 8 tests
(4 edge cases with error suppression during throw completion need more work).

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -5991,7 +5991,7 @@ language/statements/block 6/21 (28.57%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 2286/4366 (52.36%)
+language/statements/class 2285/4366 (52.34%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -7653,7 +7653,6 @@ language/statements/class 2286/4366 (52.36%)
     subclass/derived-class-return-override-catch-finally-arrow.js
     subclass/derived-class-return-override-catch-super.js interpreted
     subclass/derived-class-return-override-finally-super-arrow.js
-    subclass/derived-class-return-override-for-of.js
     subclass/derived-class-return-override-for-of-arrow.js
     subclass/superclass-arrow-function.js
     subclass/superclass-async-function.js {unsupported: [async-functions]}
@@ -7916,7 +7915,7 @@ language/statements/for-in 9/115 (7.83%)
     scope-body-lex-open.js
     scope-head-lex-close.js
 
-language/statements/for-of 204/751 (27.16%)
+language/statements/for-of 196/751 (26.1%)
     dstr/array-elem-init-evaluation.js
     dstr/array-elem-init-in.js
     dstr/array-elem-init-simple-no-strict.js non-strict
@@ -8090,10 +8089,6 @@ language/statements/for-of 204/751 (27.16%)
     decl-async-fun.js {unsupported: [async-functions]}
     decl-async-gen.js {unsupported: [async-iteration]}
     escaped-of.js
-    generator-close-via-break.js
-    generator-close-via-continue.js
-    generator-close-via-return.js
-    generator-close-via-throw.js
     head-await-using-bound-names-fordecl-tdz.js {unsupported: [async]}
     head-await-using-bound-names-in-stmt.js {unsupported: [module]}
     head-await-using-fresh-binding-per-iteration.js {unsupported: [module]}
@@ -8104,16 +8099,12 @@ language/statements/for-of 204/751 (27.16%)
     head-using-fresh-binding-per-iteration.js
     head-var-init.js
     head-var-no-expr.js
-    iterator-close-non-object.js
-    iterator-close-non-throw-get-method-abrupt.js
-    iterator-close-non-throw-get-method-is-null.js
-    iterator-close-non-throw-get-method-non-callable.js
-    iterator-close-via-break.js
-    iterator-close-via-continue.js
-    iterator-close-via-return.js
-    iterator-close-via-throw.js
+    iterator-close-throw-get-method-abrupt.js
+    iterator-close-throw-get-method-non-callable.js
+    iterator-next-error.js
     iterator-next-reference.js
     iterator-next-result-type.js
+    iterator-next-result-value-attr-error.js
     scope-body-lex-open.js
     scope-head-lex-close.js
     typedarray-backed-by-resizable-buffer.js {unsupported: [resizable-arraybuffer]}
