ES6: Add module linking validation and parser position checks
Implements ES6 spec 16.2.1.5.3.1 linking-phase validation:

- Step 9: Validate indirect exports resolve during linking
- Step 12: Validate import bindings resolve during linking

Adds parser enforcement that import/export declarations can only
appear at module top level (not inside functions, control structures,
blocks, labeled statements, or switch cases).

Fixes:
- ResolvedBinding.equals() now compares isNamespace field
- Added validateIndirectExports() to ModuleRecord
- Added nestingOfStatement tracking to Parser
- Added error messages for top-level requirement

Test results: language/module-code improved from 494/584 (84.59%)
to 364/584 (62.33%) expected failures - 130 tests now passing.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -5886,7 +5886,7 @@ language/identifiers 59/260 (22.69%)
     vertical-tilde-start.js
     vertical-tilde-start-escaped.js
 
-language/import 75/85 (88.24%)
+language/import 74/85 (87.06%)
     import-attributes/json-extensibility-array.js strict
     import-attributes/json-extensibility-object.js strict
     import-attributes/json-idempotency.js {unsupported: [module, async]}
@@ -5914,7 +5914,6 @@ language/import 75/85 (88.24%)
     import-defer/evaluation-top-level-await/sync-dependency-of-deferred-async-module/main.js {unsupported: [module, async]}
     import-defer/evaluation-triggers 39/39 (100.0%)
     import-defer/syntax/import-attributes.js strict
-    import-defer/syntax/valid-default-binding-named-defer.js strict
     import-defer/syntax/valid-defer-namespace.js strict
     escaped-as-import-specifier.js strict
     escaped-as-namespace-import.js strict
@@ -5965,10 +5964,41 @@ language/literals 39/534 (7.3%)
     string/S7.8.4_A4.3_T1.js strict
     string/S7.8.4_A4.3_T2.js strict
 
-language/module-code 494/584 (84.59%)
+language/module-code 364/584 (62.33%)
     import-attributes/import-attribute-empty.js strict
     namespace 2/2 (100.0%)
-    namespace/internals 34/34 (100.0%)
+    namespace/internals/define-own-property.js strict
+    namespace/internals/delete-exported-init.js strict
+    namespace/internals/delete-exported-uninit.js strict
+    namespace/internals/delete-non-exported.js strict
+    namespace/internals/enumerate-binding-uninit.js strict
+    namespace/internals/get-nested-namespace-dflt-skip.js strict
+    namespace/internals/get-nested-namespace-props-nrml.js strict
+    namespace/internals/get-own-property-str-found-init.js strict
+    namespace/internals/get-own-property-str-found-uninit.js strict
+    namespace/internals/get-own-property-str-not-found.js strict
+    namespace/internals/get-own-property-sym.js strict
+    namespace/internals/get-prototype-of.js strict
+    namespace/internals/get-str-found-init.js strict
+    namespace/internals/get-str-found-uninit.js strict
+    namespace/internals/get-str-initialize.js strict
+    namespace/internals/get-str-not-found.js strict
+    namespace/internals/get-str-update.js strict
+    namespace/internals/get-sym-found.js strict
+    namespace/internals/get-sym-not-found.js strict
+    namespace/internals/has-property-str-found-init.js strict
+    namespace/internals/has-property-str-found-uninit.js strict
+    namespace/internals/has-property-str-not-found.js strict
+    namespace/internals/has-property-sym-found.js strict
+    namespace/internals/has-property-sym-not-found.js strict
+    namespace/internals/object-hasOwnProperty-binding-uninit.js strict
+    namespace/internals/object-keys-binding-uninit.js strict
+    namespace/internals/object-propertyIsEnumerable-binding-uninit.js strict
+    namespace/internals/own-property-keys-binding-types.js strict
+    namespace/internals/own-property-keys-sort.js strict
+    namespace/internals/prevent-extensions.js strict
+    namespace/internals/set.js strict
+    namespace/internals/set-prototype-of-null.js strict
     source-phase-import/import-source.js {unsupported: [async]}
     top-level-await/syntax/await-expr-dyn-import.js strict
     top-level-await/syntax/block-await-expr-array-literal.js strict
@@ -6226,10 +6256,8 @@ language/module-code 494/584 (84.59%)
     early-import-eval.js strict
     early-new-target.js {unsupported: [new.target, module]}
     eval-export-dflt-cls-anon.js strict
-    eval-export-dflt-cls-anon-semi.js strict
     eval-export-dflt-cls-name-meth.js strict
     eval-export-dflt-cls-named.js strict
-    eval-export-dflt-cls-named-semi.js strict
     eval-export-dflt-expr-cls-anon.js strict
     eval-export-dflt-expr-cls-name-meth.js strict
     eval-export-dflt-expr-cls-named.js strict
@@ -6238,18 +6266,8 @@ language/module-code 494/584 (84.59%)
     eval-export-dflt-expr-gen-anon.js strict
     eval-export-dflt-expr-gen-named.js strict
     eval-export-dflt-expr-in.js strict
-    eval-export-dflt-fun-anon-semi.js strict
-    eval-export-dflt-fun-named-semi.js strict
-    eval-export-dflt-gen-anon-semi.js strict
-    eval-export-dflt-gen-named-semi.js strict
-    eval-gtbndng-indirect-trlng-comma.js strict
-    eval-gtbndng-indirect-update.js strict
-    eval-gtbndng-indirect-update-as.js strict
     eval-gtbndng-indirect-update-dflt.js strict
-    eval-rqstd-abrupt.js strict
     eval-rqstd-once.js strict
-    eval-rqstd-order.js strict
-    eval-self-once.js strict
     eval-this.js strict
     export-default-asyncfunction-declaration-binding.js strict
     export-default-asyncgenerator-declaration-binding.js strict
@@ -6267,31 +6285,13 @@ language/module-code 494/584 (84.59%)
     export-expname-from-string-string.js strict
     export-expname-import-string-binding.js strict
     export-star-as-dflt.js strict
-    instn-iee-bndng-cls.js strict
-    instn-iee-bndng-const.js strict
-    instn-iee-bndng-fun.js strict
-    instn-iee-bndng-gen.js strict
-    instn-iee-bndng-let.js strict
-    instn-iee-bndng-var.js strict
-    instn-iee-err-ambiguous.js strict
-    instn-iee-err-ambiguous-as.js strict
-    instn-iee-err-circular.js strict
-    instn-iee-err-circular-as.js strict
-    instn-iee-err-dflt-thru-star.js strict
-    instn-iee-err-dflt-thru-star-as.js strict
-    instn-iee-err-not-found.js strict
-    instn-iee-err-not-found-as.js strict
-    instn-iee-iee-cycle.js strict
     instn-iee-star-cycle.js strict
-    instn-iee-trlng-comma.js strict
     instn-local-bndng-cls.js strict
     instn-local-bndng-const.js strict
     instn-local-bndng-export-cls.js strict
     instn-local-bndng-export-const.js strict
     instn-local-bndng-export-let.js strict
     instn-local-bndng-let.js strict
-    instn-named-bndng-cls.js strict
-    instn-named-bndng-const.js strict
     instn-named-bndng-dflt-cls.js strict
     instn-named-bndng-dflt-expr.js strict
     instn-named-bndng-dflt-fun-anon.js strict
@@ -6300,34 +6300,9 @@ language/module-code 494/584 (84.59%)
     instn-named-bndng-dflt-gen-named.js strict
     instn-named-bndng-dflt-named.js strict
     instn-named-bndng-dflt-star.js strict
-    instn-named-bndng-fun.js strict
-    instn-named-bndng-gen.js strict
-    instn-named-bndng-let.js strict
-    instn-named-bndng-trlng-comma.js strict
-    instn-named-bndng-var.js strict
-    instn-named-err-ambiguous.js strict
-    instn-named-err-ambiguous-as.js strict
-    instn-named-err-dflt-thru-star-as.js strict
-    instn-named-err-dflt-thru-star-dflt.js strict
-    instn-named-err-not-found.js strict
-    instn-named-err-not-found-as.js strict
-    instn-named-err-not-found-dflt.js strict
     instn-named-id-name.js strict
-    instn-named-iee-cycle.js strict
-    instn-named-star-cycle.js strict
-    instn-once.js strict
-    instn-resolve-empty-export.js strict
-    instn-resolve-empty-import.js strict
-    instn-resolve-err-syntax-1.js strict
-    instn-resolve-err-syntax-2.js strict
-    instn-resolve-order-depth.js strict
-    instn-resolve-order-src.js strict
-    instn-same-global.js strict
     instn-star-ambiguous.js strict
     instn-star-as-props-dflt-skip.js strict
-    instn-star-binding.js strict
-    instn-star-equality.js strict
-    instn-star-err-not-found.js strict
     instn-star-id-name.js strict
     instn-star-iee-cycle.js strict
     instn-star-props-circular.js strict
@@ -6336,83 +6311,10 @@ language/module-code 494/584 (84.59%)
     instn-star-props-dflt-skip.js strict
     instn-star-props-nrml.js strict
     instn-star-star-cycle.js strict
-    instn-uniq-env-rec.js strict
     invalid-private-names-call-expression-bad-reference.js strict
     invalid-private-names-call-expression-this.js strict
     invalid-private-names-member-expression-bad-reference.js strict
     invalid-private-names-member-expression-this.js strict
-    parse-err-decl-pos-export-arrow-function.js strict
-    parse-err-decl-pos-export-block-stmt.js strict
-    parse-err-decl-pos-export-block-stmt-list.js strict
-    parse-err-decl-pos-export-class-decl-meth.js strict
-    parse-err-decl-pos-export-class-decl-meth-static.js strict
-    parse-err-decl-pos-export-class-decl-method-gen.js strict
-    parse-err-decl-pos-export-class-decl-method-gen-static.js strict
-    parse-err-decl-pos-export-class-expr-meth.js strict
-    parse-err-decl-pos-export-class-expr-meth-gen.js strict
-    parse-err-decl-pos-export-class-expr-meth-gen-static.js strict
-    parse-err-decl-pos-export-class-expr-meth-static.js strict
-    parse-err-decl-pos-export-do-while.js strict
-    parse-err-decl-pos-export-for-const.js strict
-    parse-err-decl-pos-export-for-in-const.js strict
-    parse-err-decl-pos-export-for-in-let.js strict
-    parse-err-decl-pos-export-for-in-lhs.js strict
-    parse-err-decl-pos-export-for-in-var.js strict
-    parse-err-decl-pos-export-for-let.js strict
-    parse-err-decl-pos-export-for-lhs.js strict
-    parse-err-decl-pos-export-for-of-const.js strict
-    parse-err-decl-pos-export-for-of-let.js strict
-    parse-err-decl-pos-export-for-of-lhs.js strict
-    parse-err-decl-pos-export-for-of-var.js strict
-    parse-err-decl-pos-export-for-var.js strict
-    parse-err-decl-pos-export-function-decl.js strict
-    parse-err-decl-pos-export-function-expr.js strict
-    parse-err-decl-pos-export-generator-decl.js strict
-    parse-err-decl-pos-export-generator-expr.js strict
-    parse-err-decl-pos-export-if-else.js strict
-    parse-err-decl-pos-export-if-if.js strict
-    parse-err-decl-pos-export-labeled.js strict
-    parse-err-decl-pos-export-object-gen-method.js strict
-    parse-err-decl-pos-export-object-getter.js strict
-    parse-err-decl-pos-export-object-method.js strict
-    parse-err-decl-pos-export-object-setter.js strict
-    parse-err-decl-pos-export-switch-case.js strict
-    parse-err-decl-pos-export-switch-case-dflt.js strict
-    parse-err-decl-pos-export-switch-dftl.js strict
-    parse-err-decl-pos-export-try-catch.js strict
-    parse-err-decl-pos-export-try-catch-finally.js strict
-    parse-err-decl-pos-export-try-finally.js strict
-    parse-err-decl-pos-export-try-try.js strict
-    parse-err-decl-pos-export-while.js strict
-    parse-err-decl-pos-import-arrow-function.js strict
-    parse-err-decl-pos-import-block-stmt.js strict
-    parse-err-decl-pos-import-block-stmt-list.js strict
-    parse-err-decl-pos-import-class-decl-meth.js strict
-    parse-err-decl-pos-import-class-decl-meth-static.js strict
-    parse-err-decl-pos-import-class-decl-method-gen.js strict
-    parse-err-decl-pos-import-class-decl-method-gen-static.js strict
-    parse-err-decl-pos-import-class-expr-meth.js strict
-    parse-err-decl-pos-import-class-expr-meth-gen.js strict
-    parse-err-decl-pos-import-class-expr-meth-gen-static.js strict
-    parse-err-decl-pos-import-class-expr-meth-static.js strict
-    parse-err-decl-pos-import-function-decl.js strict
-    parse-err-decl-pos-import-function-expr.js strict
-    parse-err-decl-pos-import-generator-decl.js strict
-    parse-err-decl-pos-import-generator-expr.js strict
-    parse-err-decl-pos-import-if-else.js strict
-    parse-err-decl-pos-import-if-if.js strict
-    parse-err-decl-pos-import-labeled.js strict
-    parse-err-decl-pos-import-object-gen-method.js strict
-    parse-err-decl-pos-import-object-getter.js strict
-    parse-err-decl-pos-import-object-method.js strict
-    parse-err-decl-pos-import-object-setter.js strict
-    parse-err-decl-pos-import-switch-case.js strict
-    parse-err-decl-pos-import-switch-case-dflt.js strict
-    parse-err-decl-pos-import-switch-dftl.js strict
-    parse-err-decl-pos-import-try-catch.js strict
-    parse-err-decl-pos-import-try-catch-finally.js strict
-    parse-err-decl-pos-import-try-finally.js strict
-    parse-err-decl-pos-import-try-try.js strict
     parse-err-hoist-lex-fun.js strict
     parse-err-hoist-lex-gen.js strict
     private-identifiers-not-empty.js strict
