ES2017: Async functions wrap exceptions in rejected Promises (compiled mode)
Add exception handling for async functions in compiled mode so that thrown
exceptions are wrapped in rejected Promises instead of propagating as
synchronous exceptions.

For hasVarsInRegs code path:
- Add try-catch covering function body from enterAreaStartLabel
- In handler: wrap exception with ScriptRuntime.wrapInRejectedPromise()
- Return the rejected Promise instead of rethrowing

For activation frame code path:
- Modify existing finally handler to check isAsync
- If async, wrap exception in rejected Promise and return
- Otherwise, keep existing rethrow behavior

This fixes ~19 additional async test cases including:
- try-reject-finally-*, try-throw-finally-*, try-return-finally-*
- evaluation-body-that-throws-*, dflt-params-abrupt

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -252,14 +252,13 @@ annexB/language 238/845 (28.17%)
     statements/if/emulated-undefined.js {unsupported: [IsHTMLDDA]}
     statements/switch/emulates-undefined.js {unsupported: [IsHTMLDDA]}
 
-harness 8/116 (6.9%)
+harness 7/116 (6.03%)
     asyncHelpers-throwsAsync-custom-typeerror.js
     asyncHelpers-throwsAsync-incorrect-ctor.js
-    asyncHelpers-throwsAsync-native.js compiled
     asyncHelpers-throwsAsync-no-error.js
-    asyncHelpers-throwsAsync-null.js interpreted
-    asyncHelpers-throwsAsync-primitive.js interpreted
-    asyncHelpers-throwsAsync-same-realm.js interpreted
+    asyncHelpers-throwsAsync-null.js
+    asyncHelpers-throwsAsync-primitive.js
+    asyncHelpers-throwsAsync-same-realm.js
     nativeFunctionMatcher.js
 
 built-ins/AggregateError 1/25 (4.0%)
@@ -2649,11 +2648,10 @@ language/expressions/async-arrow-function 39/60 (65.0%)
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/expressions/async-function 33/93 (35.48%)
+language/expressions/async-function 25/93 (26.88%)
     forbidden-ext/b1 4/4 (100.0%)
     early-errors-expression-formals-body-duplicate.js
     escaped-async.js
-    named-dflt-params-abrupt.js compiled
     named-dflt-params-ref-later.js
     named-dflt-params-ref-self.js
     named-eval-var-scope-syntax-err.js non-strict
@@ -2668,18 +2666,11 @@ language/expressions/async-function 33/93 (35.48%)
     named-strict-error-reassign-fn-name-in-body-in-eval.js strict
     named-unscopables-with.js non-strict
     named-unscopables-with-in-nested-fn.js non-strict
-    nameless-dflt-params-abrupt.js compiled
     nameless-dflt-params-ref-later.js
     nameless-dflt-params-ref-self.js
     nameless-eval-var-scope-syntax-err.js non-strict
     nameless-unscopables-with.js non-strict
     nameless-unscopables-with-in-nested-fn.js non-strict
-    try-reject-finally-reject.js compiled
-    try-reject-finally-throw.js compiled
-    try-return-finally-reject.js compiled
-    try-return-finally-throw.js compiled
-    try-throw-finally-reject.js compiled
-    try-throw-finally-throw.js compiled
 
 ~language/expressions/async-generator 623/623 (100.0%)
 
@@ -5518,28 +5509,17 @@ language/source-text 0/1 (0.0%)
 
 language/statementList 0/80 (0.0%)
 
-language/statements/async-function 24/74 (32.43%)
+language/statements/async-function 13/74 (17.57%)
     forbidden-ext/b1 2/2 (100.0%)
-    dflt-params-abrupt.js compiled
     dflt-params-ref-later.js
     dflt-params-ref-self.js
     early-errors-declaration-formals-body-duplicate.js
     escaped-async.js
     eval-var-scope-syntax-err.js non-strict
-    evaluation-body.js compiled
-    evaluation-body-that-throws.js compiled
-    evaluation-body-that-throws-after-await.js compiled
-    evaluation-default-that-throws.js compiled
     let-newline-await-in-async-function.js non-strict
     returns-async-arrow.js
     returns-async-arrow-returns-arguments-from-parent-function.js
     returns-async-arrow-returns-newtarget.js
-    try-reject-finally-reject.js compiled
-    try-reject-finally-throw.js compiled
-    try-return-finally-reject.js compiled
-    try-return-finally-throw.js compiled
-    try-throw-finally-reject.js compiled
-    try-throw-finally-throw.js compiled
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
