ES2017: Add async arrow function support
Add parser support for async arrow functions with parenthesized params:
- async () => expr
- async (x) => expr
- async (x, y) => expr

Implementation:
- Add isAsyncArrowFunctionCall() to detect async(...) => pattern
- Add asyncArrowFunction() to parse async arrow functions
- Convert FunctionCall arguments to arrow function parameters
- Mark resulting function as async with setIsAsync()

The detection works by checking if the expression before => is a
FunctionCall with target "async", then converting its arguments to
proper arrow function parameter format.

This fixes ~21 additional async-related tests including:
- returns-async-arrow and related tests
- async arrow function in computed property names
- async arrow function expressions

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -1073,7 +1073,7 @@ built-ins/NativeErrors 6/92 (6.52%)
 built-ins/Number 1/335 (0.3%)
     proto-from-ctor-realm.js
 
-built-ins/Object 77/3410 (2.26%)
+built-ins/Object 76/3410 (2.23%)
     defineProperties/15.2.3.7-6-a-112.js non-strict
     defineProperties/15.2.3.7-6-a-113.js non-strict
     defineProperties/15.2.3.7-6-a-164.js
@@ -1145,7 +1145,6 @@ built-ins/Object 77/3410 (2.26%)
     prototype/toString/symbol-tag-weakset-builtin.js
     prototype/setPrototypeOf-with-non-circular-values.js
     prototype/setPrototypeOf-with-non-circular-values-__proto__.js
-    seal/seal-asyncarrowfunction.js
     seal/seal-finalizationregistry.js
     seal/seal-sharedarraybuffer.js {unsupported: [SharedArrayBuffer]}
     seal/seal-weakref.js
@@ -2274,9 +2273,7 @@ language/comments 0/52 (0.0%)
 
 language/computed-property-names 0/48 (0.0%)
 
-language/destructuring 4/19 (21.05%)
-    binding/syntax/destructuring-array-parameters-function-arguments-length.js
-    binding/syntax/destructuring-object-parameters-function-arguments-length.js
+language/destructuring 2/19 (10.53%)
     binding/keyed-destructuring-property-reference-target-evaluation-order-with-bindings.js non-strict
     binding/typedarray-backed-by-resizable-buffer.js {unsupported: [resizable-arraybuffer]}
 
@@ -2610,22 +2607,15 @@ language/expressions/assignmenttargettype 19/324 (5.86%)
     parenthesized-primaryexpression-objectliteral.js
     simple-basic-identifierreference-await.js
 
-language/expressions/async-arrow-function 39/60 (65.0%)
-    forbidden-ext/b1 2/2 (100.0%)
-    forbidden-ext/b2 3/3 (100.0%)
+language/expressions/async-arrow-function 24/60 (40.0%)
     arrow-returns-promise.js
     await-as-identifier-reference.js
     await-as-identifier-reference-escaped.js
     await-as-param-ident-nested-arrow-parameter-position.js
     await-as-param-nested-arrow-body-position.js
     await-as-param-nested-arrow-parameter-position.js
-    dflt-params-abrupt.js
-    dflt-params-arg-val-not-undefined.js
-    dflt-params-arg-val-undefined.js
     dflt-params-ref-later.js
-    dflt-params-ref-prior.js
     dflt-params-ref-self.js
-    dflt-params-trailing-comma.js
     early-errors-arrow-await-in-formals.js
     early-errors-arrow-await-in-formals-default.js
     early-errors-arrow-formals-body-duplicate.js
@@ -2633,22 +2623,17 @@ language/expressions/async-arrow-function 39/60 (65.0%)
     escaped-async.js
     eval-var-scope-syntax-err.js non-strict
     name.js
-    params-trailing-comma-multiple.js
-    params-trailing-comma-single.js
-    prototype.js
     try-reject-finally-reject.js
     try-reject-finally-return.js
     try-reject-finally-throw.js
     try-return-finally-reject.js
     try-return-finally-return.js
-    try-return-finally-throw.js
     try-throw-finally-reject.js
     try-throw-finally-return.js
-    try-throw-finally-throw.js
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/expressions/async-function 25/93 (26.88%)
+language/expressions/async-function 22/93 (23.66%)
     forbidden-ext/b1 4/4 (100.0%)
     early-errors-expression-formals-body-duplicate.js
     escaped-async.js
@@ -2658,9 +2643,6 @@ language/expressions/async-function 25/93 (26.88%)
     named-reassign-fn-name-in-body.js non-strict
     named-reassign-fn-name-in-body-in-arrow.js non-strict
     named-reassign-fn-name-in-body-in-eval.js non-strict
-    named-returns-async-arrow.js
-    named-returns-async-arrow-returns-arguments-from-parent-function.js
-    named-returns-async-arrow-returns-newtarget.js
     named-strict-error-reassign-fn-name-in-body.js strict
     named-strict-error-reassign-fn-name-in-body-in-arrow.js strict
     named-strict-error-reassign-fn-name-in-body-in-eval.js strict
@@ -2693,7 +2675,7 @@ language/expressions/call 7/92 (7.61%)
     tco-non-eval-global.js {unsupported: [tail-call-optimization]}
     tco-non-eval-with.js {unsupported: [tail-call-optimization]}
 
-language/expressions/class 2015/4059 (49.64%)
+language/expressions/class 2011/4059 (49.54%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -3892,7 +3874,6 @@ language/expressions/class 2015/4059 (49.64%)
     elements/private-direct-eval-err-contains-arguments.js
     elements/private-direct-eval-err-contains-newtarget.js
     elements/private-field-after-optional-chain.js
-    elements/private-field-as-async-arrow-function.js
     elements/private-field-on-nested-class.js
     elements/private-getter-on-nested-class.js
     elements/private-literal-name-init-err-contains-arguments.js
@@ -4136,10 +4117,8 @@ language/expressions/class 2015/4059 (49.64%)
     class-name-ident-static.js non-strict
     class-name-ident-static-escaped.js non-strict
     constructor-this-tdz-during-initializers.js
-    cpn-class-expr-accessors-computed-property-name-from-async-arrow-function-expression.js
     cpn-class-expr-accessors-computed-property-name-from-await-expression.js strict
     cpn-class-expr-accessors-computed-property-name-from-yield-expression.js compiled
-    cpn-class-expr-computed-property-name-from-async-arrow-function-expression.js
     cpn-class-expr-computed-property-name-from-await-expression.js strict
     cpn-class-expr-computed-property-name-from-yield-expression.js compiled
     cpn-class-expr-fields-computed-property-name-from-additive-expression-add.js interpreted
@@ -4150,7 +4129,7 @@ language/expressions/class 2015/4059 (49.64%)
     cpn-class-expr-fields-computed-property-name-from-assignment-expression-coalesce.js interpreted
     cpn-class-expr-fields-computed-property-name-from-assignment-expression-logical-and.js interpreted
     cpn-class-expr-fields-computed-property-name-from-assignment-expression-logical-or.js interpreted
-    cpn-class-expr-fields-computed-property-name-from-async-arrow-function-expression.js
+    cpn-class-expr-fields-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-expr-fields-computed-property-name-from-await-expression.js strict
     cpn-class-expr-fields-computed-property-name-from-condition-expression-false.js interpreted
     cpn-class-expr-fields-computed-property-name-from-condition-expression-true.js interpreted
@@ -4181,7 +4160,7 @@ language/expressions/class 2015/4059 (49.64%)
     cpn-class-expr-fields-methods-computed-property-name-from-assignment-expression-coalesce.js interpreted
     cpn-class-expr-fields-methods-computed-property-name-from-assignment-expression-logical-and.js interpreted
     cpn-class-expr-fields-methods-computed-property-name-from-assignment-expression-logical-or.js interpreted
-    cpn-class-expr-fields-methods-computed-property-name-from-async-arrow-function-expression.js
+    cpn-class-expr-fields-methods-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-expr-fields-methods-computed-property-name-from-await-expression.js strict
     cpn-class-expr-fields-methods-computed-property-name-from-condition-expression-false.js interpreted
     cpn-class-expr-fields-methods-computed-property-name-from-condition-expression-true.js interpreted
@@ -4204,7 +4183,6 @@ language/expressions/class 2015/4059 (49.64%)
     cpn-class-expr-fields-methods-computed-property-name-from-numeric-literal.js interpreted
     cpn-class-expr-fields-methods-computed-property-name-from-string-literal.js
     cpn-class-expr-fields-methods-computed-property-name-from-yield-expression.js compiled
-    heritage-async-arrow-function.js
     params-dflt-meth-ref-arguments.js
     params-dflt-meth-static-ref-arguments.js
     private-getter-brand-check-multiple-evaluations-of-class-realm.js non-strict
@@ -4484,7 +4462,7 @@ language/expressions/new.target 3/14 (21.43%)
     escaped-target.js
     value-via-reflect-construct.js
 
-language/expressions/object 381/1170 (32.56%)
+language/expressions/object 380/1170 (32.48%)
     dstr/async-gen-meth-ary-init-iter-close.js {unsupported: [async-iteration, async]}
     dstr/async-gen-meth-ary-init-iter-get-err.js {unsupported: [async-iteration]}
     dstr/async-gen-meth-ary-init-iter-get-err-array-prototype.js {unsupported: [async-iteration]}
@@ -4844,7 +4822,6 @@ language/expressions/object 381/1170 (32.56%)
     __proto__-permitted-dup.js {unsupported: [async-iteration]}
     __proto__-permitted-dup-shorthand.js
     accessor-name-computed-in.js
-    cpn-obj-lit-computed-property-name-from-async-arrow-function-expression.js
     cpn-obj-lit-computed-property-name-from-await-expression.js strict
     getter-body-strict-inside.js non-strict
     ident-name-prop-name-literal-await-static-init.js
@@ -5509,7 +5486,7 @@ language/source-text 0/1 (0.0%)
 
 language/statementList 0/80 (0.0%)
 
-language/statements/async-function 13/74 (17.57%)
+language/statements/async-function 10/74 (13.51%)
     forbidden-ext/b1 2/2 (100.0%)
     dflt-params-ref-later.js
     dflt-params-ref-self.js
@@ -5517,9 +5494,6 @@ language/statements/async-function 13/74 (17.57%)
     escaped-async.js
     eval-var-scope-syntax-err.js non-strict
     let-newline-await-in-async-function.js non-strict
-    returns-async-arrow.js
-    returns-async-arrow-returns-arguments-from-parent-function.js
-    returns-async-arrow-returns-newtarget.js
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
@@ -5534,7 +5508,7 @@ language/statements/block 6/21 (28.57%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 2094/4366 (47.96%)
+language/statements/class 2091/4366 (47.89%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -6736,7 +6710,6 @@ language/statements/class 2094/4366 (47.96%)
     elements/private-direct-eval-err-contains-arguments.js
     elements/private-direct-eval-err-contains-newtarget.js
     elements/private-field-after-optional-chain.js
-    elements/private-field-as-async-arrow-function.js
     elements/private-field-is-not-clobbered-by-computed-property.js
     elements/private-field-on-nested-class.js
     elements/private-field-visible-to-direct-eval.js
@@ -7043,10 +7016,8 @@ language/statements/class 2094/4366 (47.96%)
     class-name-ident-let-escaped.js non-strict
     class-name-ident-static.js non-strict
     class-name-ident-static-escaped.js non-strict
-    cpn-class-decl-accessors-computed-property-name-from-async-arrow-function-expression.js
     cpn-class-decl-accessors-computed-property-name-from-await-expression.js strict
     cpn-class-decl-accessors-computed-property-name-from-yield-expression.js compiled
-    cpn-class-decl-computed-property-name-from-async-arrow-function-expression.js
     cpn-class-decl-computed-property-name-from-await-expression.js strict
     cpn-class-decl-computed-property-name-from-yield-expression.js compiled
     cpn-class-decl-fields-computed-property-name-from-additive-expression-add.js interpreted
@@ -7057,7 +7028,7 @@ language/statements/class 2094/4366 (47.96%)
     cpn-class-decl-fields-computed-property-name-from-assignment-expression-coalesce.js interpreted
     cpn-class-decl-fields-computed-property-name-from-assignment-expression-logical-and.js interpreted
     cpn-class-decl-fields-computed-property-name-from-assignment-expression-logical-or.js interpreted
-    cpn-class-decl-fields-computed-property-name-from-async-arrow-function-expression.js
+    cpn-class-decl-fields-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-decl-fields-computed-property-name-from-await-expression.js strict
     cpn-class-decl-fields-computed-property-name-from-condition-expression-false.js interpreted
     cpn-class-decl-fields-computed-property-name-from-condition-expression-true.js interpreted
@@ -7088,7 +7059,7 @@ language/statements/class 2094/4366 (47.96%)
     cpn-class-decl-fields-methods-computed-property-name-from-assignment-expression-coalesce.js interpreted
     cpn-class-decl-fields-methods-computed-property-name-from-assignment-expression-logical-and.js interpreted
     cpn-class-decl-fields-methods-computed-property-name-from-assignment-expression-logical-or.js interpreted
-    cpn-class-decl-fields-methods-computed-property-name-from-async-arrow-function-expression.js
+    cpn-class-decl-fields-methods-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-decl-fields-methods-computed-property-name-from-await-expression.js strict
     cpn-class-decl-fields-methods-computed-property-name-from-condition-expression-false.js interpreted
     cpn-class-decl-fields-methods-computed-property-name-from-condition-expression-true.js interpreted
