ES2017: Reject escaped 'async' as the async keyword
Per ES2017, the 'async' contextual keyword must not contain Unicode
escape sequences. Code like `\u0061sync function f() {}` should be
treated as an identifier reference, not an async function declaration.

Implementation:
- Add containsEscape field to Name node to track if identifier was
  written with Unicode escapes
- Track escape info through saveNameTokenData and createNameNode
- Check for escapes in isAsyncArrowFunctionCall() to reject escaped async
- Check for escapes before treating Token.ASYNC as async keyword in
  various parser locations

This fixes the escaped-async tests for:
- async-arrow-function
- async-function expressions
- async-function statements

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -2606,7 +2606,7 @@ language/expressions/assignmenttargettype 19/324 (5.86%)
     parenthesized-primaryexpression-objectliteral.js
     simple-basic-identifierreference-await.js
 
-language/expressions/async-arrow-function 11/60 (18.33%)
+language/expressions/async-arrow-function 10/60 (16.67%)
     await-as-param-ident-nested-arrow-parameter-position.js
     await-as-param-nested-arrow-body-position.js
     await-as-param-nested-arrow-parameter-position.js
@@ -2614,15 +2614,13 @@ language/expressions/async-arrow-function 11/60 (18.33%)
     dflt-params-ref-self.js
     early-errors-arrow-await-in-formals-default.js
     early-errors-arrow-formals-body-duplicate.js
-    escaped-async.js
     eval-var-scope-syntax-err.js non-strict
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/expressions/async-function 22/93 (23.66%)
+language/expressions/async-function 21/93 (22.58%)
     forbidden-ext/b1 4/4 (100.0%)
     early-errors-expression-formals-body-duplicate.js
-    escaped-async.js
     named-dflt-params-ref-later.js
     named-dflt-params-ref-self.js
     named-eval-var-scope-syntax-err.js non-strict
@@ -5472,12 +5470,11 @@ language/source-text 0/1 (0.0%)
 
 language/statementList 0/80 (0.0%)
 
-language/statements/async-function 10/74 (13.51%)
+language/statements/async-function 9/74 (12.16%)
     forbidden-ext/b1 2/2 (100.0%)
     dflt-params-ref-later.js
     dflt-params-ref-self.js
     early-errors-declaration-formals-body-duplicate.js
-    escaped-async.js
     eval-var-scope-syntax-err.js non-strict
     let-newline-await-in-async-function.js non-strict
     unscopables-with.js non-strict
@@ -7230,7 +7227,7 @@ language/statements/for-of 75/751 (9.99%)
     head-await-using-fresh-binding-per-iteration.js strict
     head-decl-no-expr.js
     head-expr-no-expr.js
-    head-lhs-async-escaped.js
+    head-lhs-async-escaped.js non-strict
     head-lhs-async-parens.js non-strict
     head-using-bound-names-fordecl-tdz.js
     head-using-fresh-binding-per-iteration.js
